Changed filter container to modal on mobile, ensured filter state consistency

--- a/frontend/public/style.css
+++ b/frontend/public/style.css
@@ -314,31 +314,26 @@ body {
 
 @media (max-width: 1200px) {
     .app {
-        display: grid;
-        grid-template-rows: 1fr 1fr;
-        grid-template-columns: 1fr 1fr;
+        display: flex;
+        flex-direction: column;
         gap: 10px;
         width: 100%;
+        height: auto;
         justify-items: center;
     }
     
     .app > div:nth-child(1) {
-        grid-row: 1;
-        grid-column: 1;
         padding: 0rem;
     }
 
     .app > div:nth-child(2) {
-        grid-row: 2;
-        grid-column: 1;
         width: auto;
+        height: 500px;
         margin: 0;
-        padding: calc(5%);
+        padding: 20px;
     }
     
     .app > div:nth-child(3) {
-        grid-column: 2;
-        grid-row: 1 / span 2;
         width: 100%;
     }
 
